fix horizontal scroll issue

--- a/_src/scss/base/globals.scss
+++ b/_src/scss/base/globals.scss
@@ -2,13 +2,16 @@
   box-sizing: border-box; 
 } 
 
+html {
+  overflow-x: hidden;
+}
+
 html, body {
   font-size: 100%;
   font-family: $body-copy;
   line-height: 2;
   color: $dark-color;
   background-color: #fafafa;
-  overflow-x: hidden;
 }
 
 img {
